@@ -1,5 +1,8 @@
 package com.karlson.dwsj.service;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.karlson.dwsj.model.Pokemon;
+
 import java.io.BufferedReader;
 import java.io.DataOutputStream;
 import java.io.IOException;
@@ -9,20 +12,23 @@ import java.net.URI;
 import java.net.URISyntaxException;
 
 public class RestClient {
+    private final ObjectMapper objectMapper;
+    private final String apiUrl = "http://localhost:8080/:8080/api/v1/pokemons/publish";
 
-    private final String apiUrl = "http://localhost:8080/api/v1/kafka/publish";
+    ;
 
     private String postData;
 
-    public RestClient(String postData) {
-        this.postData = postData;
+    public RestClient() {
+        this.objectMapper = new ObjectMapper();
     }
 
-    public void sendMessage() {
+    public void sendMessage(Pokemon pokemon) {
         try {
-            URI uri = new URI(apiUrl);
+            this.postData = objectMapper.writeValueAsString(pokemon);
 
-            // URL url = new URL();
+
+            URI uri = new URI(apiUrl);
 
             HttpURLConnection connection = (HttpURLConnection) uri.toURL().openConnection();
             connection.setRequestMethod("POST");
@@ -47,7 +53,6 @@ public class RestClient {
                 }
                 System.out.printf("Response body %s ", response);
             }
-
 
         } catch (URISyntaxException | IOException e) {
             throw new RuntimeException(e);
